Modernize sge-build plugin architecture and adopt sge-native-providers
Convert SgePlugin to AutoPlugin with auto-triggering platform plugins
(SgeDesktopJvmPlatform, SgeBrowserPlatform, SgeDesktopNativePlatform,
SgeAndroidPlatform). Delegate JVM packaging to JvmPackaging, reducing
SgePackaging from 1035 to ~280 lines.

Extract Android plugin, NativeCrossAxis, and cross-native utilities
upstream to multiarch-scala. Simplify demos/build.sbt from ~440 to ~120
lines with zero-config .enablePlugins(SgePlugin) API.

Update multiarch-scala and sge-native-providers to fix empty
sn-provider.json, Windows angle .dll linking, and releasePackage naming.